--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
     <title>Login Page</title>
 </head>
 <body>
@@ -18,11 +18,11 @@
                         <form id="login-form">
                             <div class="form-group">
                                 <label for="username">Username:</label>
-                                <input type="text" class="form-control" id="username" name="username">
+                                <input type="text" class="form-control" id="username" name="username" value="user">
                             </div>
                             <div class="form-group">
                                 <label for="password">Password:</label>
-                                <input type="password" class="form-control" id="password" name="password">
+                                <input type="password" class="form-control" id="password" name="password" value ="password">
                             </div>
                             <button type="submit" class="btn btn-primary">Login</button>
                         </form>
@@ -48,7 +48,7 @@
             .then(data => {
                 if (data.message) {
                     alert(data.message);
-                    window.location.href = '/protected';
+                    window.location.href = '/todos';
                 } else if (data.error) {
                     alert(data.error);
                 }
