--- a/templates/login.html
+++ b/templates/login.html
@@ -17,8 +17,8 @@
                     <div class="card-body">
                         <form id="login-form">
                             <div class="form-group">
-                                <label for="username">Username:</label>
-                                <input type="text" class="form-control" id="username" name="username" value="user">
+                                <label for="email">Email:</label>
+                                <input type="email" class="form-control" id="email" name="email" value="user">
                             </div>
                             <div class="form-group">
                                 <label for="password">Password:</label>
@@ -34,7 +34,7 @@
     <script>
         document.getElementById('login-form').addEventListener('submit', function(event) {
             event.preventDefault();
-            const username = document.getElementById('username').value;
+            const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
             fetch('/login', {
@@ -42,7 +42,7 @@
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ username, password })
+                body: JSON.stringify({ email, password })
             })
             .then(response => response.json())
             .then(data => {
