--- a/templates/register.html
+++ b/templates/register.html
@@ -59,7 +59,7 @@
         .then(data => {
             if (data.message) {
                 alert(data.message);
-                window.location.href = '/todos';
+                window.location.href = '/login';
             } else if (data.error) {
                 alert(data.error);
             }
