--- a/templates/login.html
+++ b/templates/login.html
@@ -18,11 +18,11 @@
                         <form id="login-form">
                             <div class="form-group">
                                 <label for="email">Email:</label>
-                                <input type="email" class="form-control" id="email" name="email" value="user">
+                                <input type="email" class="form-control" id="email" name="email" value="maria@gmail.com">
                             </div>
                             <div class="form-group">
                                 <label for="password">Password:</label>
-                                <input type="password" class="form-control" id="password" name="password" value ="password">
+                                <input type="password" class="form-control" id="password" name="password" value ="maria123456">
                             </div>
                             <button type="submit" class="btn btn-primary">Login</button>
                         </form>
