--- a/templates/header.html
+++ b/templates/header.html
@@ -2,4 +2,5 @@
   <link href="static/bootstrap.min.css" rel="stylesheet">
   <script src="/static/bootstrap.bundle.js"></script>
   <link rel="icon" type="image/x-icon" href="./static/icon-book.svg"> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 {{end}}
