--- a/templates/header.html
+++ b/templates/header.html
@@ -2,5 +2,6 @@
   <link href="static/bootstrap.min.css" rel="stylesheet">
   <script src="/static/bootstrap.bundle.js"></script>
   <link rel="icon" type="image/x-icon" href="./static/icon-book.svg"> 
-  <link rel="stylesheet" href="{{ asset('css/bootstrap-icons.css') }}">
+  <link rel="stylesheet" href="/static/bootstrap-icons.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {{end}}
