--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,17 @@
 {{define "footer"}}
-<footer>
-  <p>&copy; 2024 My Website</p>
+<footer class="fixed-bottom">
+  <nav class="navbar navbar-expand-lg bg-light shadow p-2 mb-1 rounded">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+    </ul>
+    <span class="navbar-text h5">
+      &copy; 2024 My Website
+    </span>
+
+  </nav>
 </footer>
 </body>
 </html>
