--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 {{define "head"}}
   <link href="static/bootstrap.min.css" rel="stylesheet">
   <script src="/static/bootstrap.bundle.js"></script>
-  <link rel="icon" type="image/x-icon" href="./static/icon-book.svg"> 
+  <link rel="icon" type="image/x-icon" href="./static/menu-icon.jpg"> 
   <link rel="stylesheet" href="static/bootstrap-icons.css">
 {{end}}
