--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,7 @@
       <li class="nav-item"><a class="nav-link" href="#">About</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+      <li class="nav-item"><a class="nav-link" href="/login">Entrar</a></li>
     </ul>
     <span class="navbar-text h5">
       &copy; 2024 My Website
