--- a/templates/todo.html
+++ b/templates/todo.html
@@ -82,7 +82,7 @@ $(document).ready(function() {
         headers: {
             'Content-Type': 'application/json'
         },
-        body: JSON.stringify({ Id })
+        body: JSON.stringify({ Id: parseInt(Id) })
     })
     .then(response => response.json())
     .then(data => {
@@ -95,27 +95,5 @@ $(document).ready(function() {
     });
   });
 });
-  // document.getElementById('login-form').addEventListener('submit', function(event) {
-  //   event.preventDefault();
-  //   const email = document.getElementById('email').value;
-  //   const password = document.getElementById('password').value;
-
-  //   fetch('/login', {
-  //       method: 'POST',
-  //       headers: {
-  //           'Content-Type': 'application/json'
-  //       },
-  //       body: JSON.stringify({ email, password })
-  //   })
-  //   .then(response => response.json())
-  //   .then(data => {
-  //       if (data.message) {
-  //           alert(data.message);
-  //           window.location.href = '/todos';
-  //       } else if (data.error) {
-  //           alert(data.error);
-  //       }
-  //   });
-  // });
 
 </script>
