--- a/templates/todo.html
+++ b/templates/todo.html
@@ -55,6 +55,9 @@
                     </button>
                   {{ end }}
               </div>
+              <div class="col-2 pt-2">
+                {{ .Updated_at.Format "02/01/2006" }}
+              </div>
               <div class="col-8 pt-2">
                 <input type="text" class="todo_id" name="{{.ID}}" value="{{.ID}}" hidden> 
                 {{ .Description }}
@@ -75,57 +78,23 @@ $(document).ready(function() {
 
   $('.button-uncheck').click(function(event) {
     event.preventDefault();
-    const todoItem = $(this).closest('li');
-    const Id = todoItem.find('.todo_id').val();
-
-    fetch('/todos_uncheck', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ Id: parseInt(Id) })
-    })
-    .then(response => response.json())
-    .then(data => {
-        if (data.message) {
-            alert(data.message);
-            window.location.href = '/todos';
-        } else if (data.error) {
-            alert(data.error);
-        }
-    });
+    parseId($(this),'/todos_uncheck');
   });
 
   $('.button-check').click(function(event) {
     event.preventDefault();
-    const todoItem = $(this).closest('li');
-    const Id = todoItem.find('.todo_id').val();
-
-    fetch('/todos_check', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ Id: parseInt(Id) })
-    })
-    .then(response => response.json())
-    .then(data => {
-        if (data.message) {
-            alert(data.message);
-            window.location.href = '/todos';
-        } else if (data.error) {
-            alert(data.error);
-        }
-    });
+    parseId($(this),'/todos_check');
   });
-
 
   $('.btn_delete').click(function(event) {
     event.preventDefault();
-    const todoItem = $(this).closest('li');
-    const Id = todoItem.find('.todo_id').val();
+    parseId($(this),'/todos_delete');
+  });
 
-    fetch('/todos_delete', {
+  function parseId(context,route) {
+
+    const Id = context.closest('li').find('.todo_id').val();
+    fetch(route, {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
@@ -141,7 +110,9 @@ $(document).ready(function() {
             alert(data.error);
         }
     });
-  });
+
+  }
+
 });
 
 </script>
