--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <title>Login Page</title>
-</head>
+<html lang="pt-BR">
+
+{{ template "head" . }}
+
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
@@ -20,11 +17,19 @@
                                 <label for="email">Email:</label>
                                 <input type="email" class="form-control" id="email" name="email" value="maria@gmail.com">
                             </div>
-                            <div class="form-group">
-                                <label for="password">Password:</label>
-                                <input type="password" class="form-control" id="password" name="password" value ="maria123456">
+                            <div class="form-group mt-3">
+                                <div class="row">
+                                    <div class="col-1">
+                                        <button type="submit" class="btn" title="Login">
+                                            <i class="bi bi-box-arrow-in-right"></i>
+                                        </button>
+                                    </div>
+                                    <div class="col-11">
+                                        <input type="password" class="form-control" id="password" name="password" value ="maria123456">
+                                    </div>
+                                </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Login</button>
+
                         </form>
                     </div>
                 </div>
