Criado cadastro inicial de empresas

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,6 +25,9 @@
 			<li class="nav-item {{ if .register_active }} {{ .register_active }} {{end}}">
 				<a class="nav-link active" aria-current="page" href="/register">Cadastro</a>
 			</li>
+			<li class="nav-item {{ if .company_active }} {{ .company_active }} {{end}}">
+				<a class="nav-link active" aria-current="page" href="/company">Empresa</a>
+			</li>
 		</ul>
 	  </div>
 	</div>
