Criado modal para inserção de dados

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,7 @@
   <link href="static/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="./static/menu-icon.jpg"> 
   <link rel="stylesheet" href="static/bootstrap-icons.css">
+  <link rel="stylesheet" href="static/cardapio.css">
 
   <script src="/static/bootstrap.bundle.js"></script>
   <script src="/static/jquery-3.7.1.min.js"></script>
