--- a/templates/company/company.html
+++ b/templates/company/company.html
@@ -31,5 +31,7 @@ $(document).ready(function() {
         window.location.href = '/company/logo';
     });
 
+    $('#modal-name-id').modal('show');
+
 });
 </script>
