--- a/templates/company/modal-logo.html
+++ b/templates/company/modal-logo.html
@@ -34,10 +34,11 @@
 
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-					<button id="modal-description-id" class="btn btn-primary">Próximo</button>
+					<button type="button" id="btn-name-id" class="btn btn-primary">Próximo</button>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 {{end}}
+
