--- a/templates/company/modal-address.html
+++ b/templates/company/modal-address.html
@@ -5,7 +5,7 @@
 			<div class="modal-content">
 
 				<div class="modal-header">
-					<h3 class="modal-title" id="staticBackdropLabel">Endereço</h3>
+					<h3 class="modal-title">Endereço</h3>
 				</div>
 
 				<div class="modal-body">
@@ -50,7 +50,7 @@
 
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-					<button id="modal-description-id" class="btn btn-primary">Próximo</button>
+					<button id="btn-address-id" class="btn btn-primary">Próximo</button>
 				</div>
 			</div>
 		</div>
