--- a/templates/company/modal-contact.html
+++ b/templates/company/modal-contact.html
@@ -7,7 +7,7 @@
 				<div class="modal-header">
 					<div class="row">
 						<div class="col-12">
-							<h3 class="modal-title" id="staticBackdropLabel" name="staticBackdropLabel">Dados do administrador</h3>
+							<h3 class="modal-title">Dados do administrador</h3>
 						</div>
 						<div class="col-12">
 							<label>Usuário que vai administrar o sistema. Outros usuários podem ser acrescentados mais tarde.</label>
@@ -36,7 +36,7 @@
 
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-					<button id="modal-description-id" class="btn btn-primary">Próximo</button>
+					<button id="btn-contact-id" class="btn btn-primary">Próximo</button>
 				</div>
 			</div>
 		</div>
