--- a/templates/company/modal-sumary.html
+++ b/templates/company/modal-sumary.html
@@ -18,6 +18,16 @@
 				<div class="modal-body">
 					<p id="p-name-id"></p>
 					<p id="p-description-id"></p>
+					<p id="p-street-id"></p>
+					<p id="p-number-id"></p>
+					<p id="p-complement-id"></p>
+					<p id="p-city-id"></p>
+					<p id="p-state-id"></p>
+					<p id="p-zip-id"></p>
+					<p id="p-country-id"></p>
+					<p id="p-phone-id"></p>
+					<p id="p-admin-id"></p>
+					<p id="p-email-id"></p>
 				</div>
 
 				<div class="modal-footer">
