--- a/templates/company/modal-contact.html
+++ b/templates/company/modal-contact.html
@@ -1,6 +1,6 @@
 {{define "company-contact-modal"}}
 <div class="row d-flex justify-content-center">
-	<div class="modal modal-xl fade" id="modal-contact-id" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal modal-xl fade" id="company-contact-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 
@@ -35,8 +35,8 @@
 				</div>
 
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-					<button id="btn-contact-id" class="btn btn-primary">Próximo</button>
+					<button type="button" id="btn-contact-previous" class="btn btn-outline-success">Anterior</button>
+					<button type="button" id="btn-contact-next" class="btn btn-outline-success">Próximo</button>
 				</div>
 			</div>
 		</div>
