--- a/templates/company/modal-name.html
+++ b/templates/company/modal-name.html
@@ -1,6 +1,6 @@
-{{define "company-logo-modal"}}
+{{define "company-name-modal"}}
 <div class="row d-flex justify-content-center">
-	<div class="modal modal-xl fade" id="modal-name-id" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal modal-xl fade" id="company-name-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 
@@ -33,8 +33,8 @@
 				</div>
 
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-					<button type="button" id="btn-name-id" class="btn btn-primary">Próximo</button>
+					<button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">Cancelar</button>
+					<button type="button" id="btn-name-next" class="btn btn-outline-success">Próximo</button>
 				</div>
 			</div>
 		</div>
