--- a/templates/company/modal-sumary.html
+++ b/templates/company/modal-sumary.html
@@ -1,6 +1,6 @@
 {{define "company-sumary-modal"}}
 <div class="row d-flex justify-content-center">
-	<div class="modal modal-xl fade" id="modal-sumary-id" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal modal-xl fade" id="company-sumary-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 
@@ -31,8 +31,8 @@
 				</div>
 
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-					<button id="modal-description-id" class="btn btn-primary">Próximo</button>
+					<button type="button" id="btn-sumary-previous" class="btn btn-outline-success">Anterior</button>
+					<button type="button" id="btn-sumary-next" class="btn btn-outline-success">Próximo</button>
 				</div>
 			</div>
 		</div>
