--- a/templates/company/modal-contact.html
+++ b/templates/company/modal-contact.html
@@ -1,6 +1,6 @@
 {{define "company-contact-modal"}}
 <div class="row d-flex justify-content-center">
-	<div class="modal modal-xl fade" id="company-contact-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal modal-xl fade" id="company-contact-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 
@@ -19,17 +19,17 @@
 					<div class="row">
 						<div class="col-12">
 							<label for="company-admin">Nome do administrador</label>
-							<input id="company-admin-id" name="company-admin" type="text" class="form-control"/>
+							<input id="company-admin-id" name="company-admin" type="text" class="form-control border border-danger" value="Heron"/>
 						</div>
 
 						<div class="col-12">
 							<label for="company-email">Email usado para recuperação de senha</label>
-							<input id="company-email-id" name="company-email" type="text" class="form-control"/>
+							<input id="company-email-id" name="company-email" type="text" class="form-control border border-danger" value="heron@gmail.com"/>
 						</div>
 
 						<div class="col-12">
 							<label for="company-phone">Telefone</label>
-							<input id="company-phone-id" name="company-phone" type="text" class="form-control"/>
+							<input id="company-phone-id" name="company-phone" type="text" class="form-control border border-danger" value="12"/>
 						</div>
 					</div>
 				</div>
