--- a/templates/company/modal-name.html
+++ b/templates/company/modal-name.html
@@ -5,17 +5,14 @@
 			<div class="modal-content">
 
 				<div class="modal-header">
-					<h3 class="modal-title" id="staticBackdropLabel">Nome da sua empresa</h3>
+					<h3 class="modal-title">Nome da sua empresa</h3>
 				</div>
 
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-12">
 							<label for="company-name">Digite o nome da sua empresa</label>
-							<input id="company-name-id" name="company-name" type="text" class="form-control"/>
-						</div>
-						<div class="col-12">
-							<label>Campo obrigatório</label>
+							<input id="company-name-id" name="company-name" type="text" class="form-control border border-danger" value="Cantina da Nena"/>
 						</div>
 					</div>
 
