--- a/templates/company/modal-sumary.html
+++ b/templates/company/modal-sumary.html
@@ -32,7 +32,7 @@
 
 				<div class="modal-footer">
 					<button type="button" id="btn-sumary-previous" class="btn btn-outline-success">Anterior</button>
-					<button type="button" id="btn-sumary-next" class="btn btn-outline-success">Próximo</button>
+					<button type="button" id="btn-sumary-next" class="btn btn-outline-danger disabled">Salvar</button>
 				</div>
 			</div>
 		</div>
