--- a/templates/company/modal-address.html
+++ b/templates/company/modal-address.html
@@ -25,7 +25,7 @@
 
 						<div class="col-9">
 							<label for="company-city">Cidade</label>
-							<input id="company-city-id" name="company-city" type="text" class="form-control"/>
+							<input id="company-city-id" name="company-city" type="text" class="form-control border border-danger" value="São José dos Campos"/>
 						</div>
 						<div class="col-3">
 							<label for="company-state">Estado</label>
