--- a/templates/company/modal-save.html
+++ b/templates/company/modal-save.html
@@ -16,8 +16,8 @@
 					<p>Os dados do usuário gerente podem ser alterados a qualquer momento pelo administrador.</p>
 
 					<div class="form-check">
-						<input class="form-check-input" type="checkbox" id="termsCheck">
-						<label class="form-check-label" for="termsCheck">
+						<input class="form-check-input" type="checkbox" id="termsCheckId">
+						<label id="termsCheckLabelId" class="text-danger" for="termsCheck">
 							Eu li e aceito os termos e condições
 						</label>
 					</div>
